@@ -1,5 +1,10 @@
 2006-08-25  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add a mime-type for musepack, patch from
+	Pino Toscano <toscano.pino@tiscali.it> (Closes: #6408)
+
+2006-08-25  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add ECMAScript mime-type
 	(application/ecmascript), patch by Ville Skyttä
 	<ville.skytta@iki.fi> (Closes: #6616)
